--- a/src/ensembl/src/root/Root.scss
+++ b/src/ensembl/src/root/Root.scss
@@ -1,3 +1,12 @@
 .root {
-  position: relative;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.example {
+  grid-column: 1/2;
+}
+
+.exercise {
+  grid-column: 2/3;
 }
